'add_txt_to_image_model'

--- a/laion_400m_data.ipynb
+++ b/laion_400m_data.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c3d8876a",
+   "id": "635d4b1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7d020cd1",
+   "id": "2d98085e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6387fce4",
+   "id": "967debf5",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "444701dc",
+   "id": "ad0287fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9f315b25",
+   "id": "89bd5d19",
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "bb936a13",
+   "id": "d1413070",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,10 +573,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "ebb811dd",
+   "execution_count": null,
+   "id": "0783eb07",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n",
+      "unable to download url\n"
+     ]
+    }
+   ],
    "source": [
     "pathname=r'D:\\laion400m\\images'\n",
     "if not os.path.exists(pathname):\n",
@@ -586,7 +668,7 @@
     "with open(r'D:\\laion400m\\laion_data.csv', 'w', encoding='UTF8', newline='') as f:\n",
     "    writer = csv.writer(f)\n",
     "    \n",
-    "    for i in range(0,10):  #to len(df)\n",
+    "    for i in range(0,len(df)):  #to len(df)\n",
     "        url=df[\"URL\"][i]\n",
     "        idx=str(i)+'.png'# need to figure out a unique index\n",
     "        filename=os.path.join(pathname,idx)\n",
@@ -606,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36fd4754",
+   "id": "d9c7542c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bca8103f",
+   "id": "bd68f6a6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -624,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b33ec0d",
+   "id": "47e62620",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -632,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e852c1b",
+   "id": "81255a13",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -640,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43123ce0",
+   "id": "aa75e752",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,7 +734,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ead0525",
+   "id": "8e606009",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -660,7 +742,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b090d92",
+   "id": "4786f1b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +752,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "296823ab",
+   "id": "c0a332ab",
    "metadata": {},
    "outputs": [],
    "source": []
